Updating to 5be27d9a84d9e00868a6755120f48aff8f2dcdb5.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_7__2372013'>Session 7 - 23/7/2013</h3>
+
+<ul>
+<li><a href='/lp3'>Landing Page 3</a></li>
+
+<li><a href='/hmwk7'>Homework 7</a></li>
+</ul>
+
 <h3 id='session_6__1872013'>Session 6 - 18/7/2013</h3>
 
 <ul>
