--- a/lp3/index.html
+++ b/lp3/index.html
@@ -289,11 +289,11 @@ To git@github.com:tomclose/git_test.git
 <p>In this section we will be talking about three different types of branches:</p>
 
 <ul>
-<li><strong>remote branches</strong>: exist in the remote repository.</li>
+<li><strong>remote branches</strong>: these exist in the remote repository.</li>
 
-<li><strong>remote-tracking branches</strong>: exist on your local machine, mirror the states of the remote branches exactly.</li>
+<li><strong>remote-tracking branches</strong>: these exist on your local machine. They mirror the states of the remote branches exactly.</li>
 
-<li><strong>local branches</strong>: exist on your local machine, these are the branches that you can work on directly.</li>
+<li><strong>local branches</strong>: these exist on your local machine. They are the branches that you can work on directly.</li>
 </ul>
 
 <p>Before you work on someone else&#8217;s (remote) branch you have to get it from the remote repository. To do this you need to use the <code>git fetch</code> command. By default this will fetch all the remote branches from the <code>origin</code> remote.</p>
