Updating to 5be27d9a84d9e00868a6755120f48aff8f2dcdb5.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,16 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_8__2572013'>Session 8 - 25/7/2013</h3>
+
+<ul>
+<li><a href='/sinatra1'>Sinatra 1</a></li>
+
+<li><a href='/lp4'>Landing Page 4</a></li>
+
+<li><a href='/hmwk8'>Homework 8</a></li>
+</ul>
+
 <h3 id='session_7__2372013'>Session 7 - 23/7/2013</h3>
 
 <ul>
