--- a/lp4/index.html
+++ b/lp4/index.html
@@ -44,15 +44,15 @@
 		
 	
 		
-		<li><a href="#2_google_analytics" data-toggle="tab"> </a></li>
+		<li><a href="#2_google_analytics" data-toggle="tab">Google Analytics </a></li>
 		
 	
 		
-		<li><a href="#3_setting_a_goal" data-toggle="tab"> </a></li>
+		<li><a href="#3_setting_a_goal" data-toggle="tab">Setting up goals </a></li>
 		
 	
 		
-		<li><a href="#4_running_an_experiment" data-toggle="tab"> </a></li>
+		<li><a href="#4_running_an_experiment" data-toggle="tab">AB Testing </a></li>
 		
 	
 </ul>
@@ -147,33 +147,114 @@
 
 <h3 id='actionable_metrics_vs_vanity_metrics'>Actionable metrics vs vanity metrics</h3>
 
-<p>It is</p>
+<p>It is important to think carefully about the metrics that you will collect and measure. It&#8217;s really easy to fall into the trap of collecting vanity metrics e.g.</p>
 
-<p><a href='http://500hats.typepad.com/500blogs/2007/09/startup-metrics.html'>Startup metrics for pirates</a></p>
+<ul>
+<li>We have 10k visitors per day.</li>
+
+<li>We have 2500 users.</li>
+</ul>
+
+<p>These might be interesting to know, but they&#8217;re not <em>actionable</em> - they don&#8217;t help you know what to work on next. Actionable metrics are things like:</p>
+
+<ul>
+<li>Of the people who come to our landing page 40% click on the &#8216;signup&#8217; button.</li>
+
+<li>Of our signed up users, 30% log in everyday, but 40% haven&#8217;t logged in more than once.</li>
+</ul>
+
+<p>Actionable metrics tell you what you need to work on next.</p>
+
+<h3 id='startup_metrics_for_pirates_aarrr_'>Startup metrics for pirates: AARRR &#8230;</h3>
+
+<p>When you&#8217;re thinking about startup metrics it is useful to group them into 5 main areas:</p>
+
+<ul>
+<li><strong>Acquisition</strong>: getting people to come to your site.</li>
+
+<li><strong>Activation</strong>: getting people to take the first steps e.g. sign up/create an event/etc.</li>
+
+<li><strong>Retention</strong>: getting people to come back.</li>
+
+<li><strong>Referral</strong>: getting people to tell their friends.</li>
+
+<li><strong>Revenue</strong>: getting people to give you money!</li>
+</ul>
+
+<p>These ideas were popularised by Dave McClure in his well known <a href='http://500hats.typepad.com/500blogs/2007/09/startup-metrics.html'>startup metrics for pirates</a> talk.</p>
 	</div>
 
 	
 	<div class="tab-pane " id="2_google_analytics">
 	
 
-		<h2></h2>
-		
+		<h2>Google Analytics</h2>
+		<p>Google Analytics is an analytics service provided for free by Google. It allows you get an overview of how many people are visiting your site, where they come from, what they do, and much more.</p>
+
+<h3 id='google_analytics_vs_mixpanelkissmetrics'>Google Analytics vs. Mixpanel/Kissmetrics</h3>
+
+<p>There are many other analytics services out there. <a href='https://mixpanel.com/'>Mixpanel</a> and <a href='https://www.kissmetrics.com/'>Kissmetrics</a> are two of the most well-known.</p>
+
+<p>Kissmetrics seems to be very advanced. They provide a lot of good material on how to use analytics (especially kissmetrics!) through the Kissmetrics blogs and through regular webinars. These are well worth having a look at/signing up for. Kissmetrics will allow you to track individuals from their first visit to your site, through to signing up and any subsequent actions. You can get excellent insights into where your most valuable users come from. Kissmetrics is expensive though - their cheapest plan is $150/month.</p>
+
+<p>Mixpanel also focusses on tracking individual users. It seems most suited to when you have an app with users who log in. You can add tracking events to certain user actions. Mixpanel has a handy free plan to get you started.</p>
+
+<p>Google Analytics seems to focus mostly on aggregated statistics rather than individual users: it&#8217;s perfect for a landing page, where you want to track numbers and percentages but doesn&#8217;t offer the same amount of control for tracking user interaction with your app.</p>
+
+<p>That said, Google Analytics is in the process of a major upgrade to &#8216;Universal Analytics&#8217;. This should make it possible to track on a user-level more like Mixpanel or Kissmetrics.</p>
+
+<h3 id='setting_up_google_analytics'>Setting up Google Analytics</h3>
+
+<p>To use Google Analytics you need to place a snippet of javascript (that they provide) on each of the HTML pages on your site. When a user visits the page, the javascript sends a message to the Google Analytics site logging the visit.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>In your landing page team:</p>
+
+<ol>
+<li>Have one team member set up a <a href='http://www.google.com/analytics/'>Google Analytics</a> account. You want to choose the default &#8216;Universal Analytics&#8217; option.</li>
+
+<li>In the Admin section, create a new account for your landing page.</li>
+
+<li>Following the instructions, install the analytics code on all the pages of your site.</li>
+
+<li>Push your changes up to the <code>gh-pages</code> branch on GitHub.</li>
+</ol>
+</div>
 	</div>
 
 	
 	<div class="tab-pane " id="3_setting_a_goal">
 	
 
-		<h2></h2>
-		
+		<h2>Setting up goals</h2>
+		<p>Google Analytics will allow you to set up goals for users on your site. You can define these goals in terms of urls that you want users to reach. For your landing page the goal will be for a user to reach the <code>thanks.html</code> page (which will mean they have signed up).</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>In the Admin section, set up a goal that a user reaches the <code>thanks.html</code> page. Add the <code>index.html</code> and <code>form.html</code> as steps.</li>
+
+<li>Push your code to github. See if you can see your goal being met on the realtime tab.</li>
+</ol>
+</div>
 	</div>
 
 	
 	<div class="tab-pane " id="4_running_an_experiment">
 	
 
-		<h2></h2>
-		
+		<h2>AB Testing</h2>
+		<p>AB Testing is experimenting with different ideas on your site. You set up two versions of a page that you want to test and randomly send your users to one or the other. Over time you build up statistics about which version is best.</p>
+
+<p>There are lots of tools available for AB testing e.g <a href='https://www.optimizely.com'>Optimizely</a> and <a href='http://visualwebsiteoptimizer.com/'>Visual Website Optimizer</a>. These make it easy for non-technical marketing folk to run AB tests.</p>
+
+<p>As you all know how to edit HTML you can run AB tests using Google Analytics for free! You basically provide two (or more) different HTML files to represent the variations you want to test. You then set up an &#8216;Experiment&#8217; in Google Analytics pasting in the javascript code they give you. Google Analytics will set a cookie on the users machine, so that if they return to the page they will see the same version.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>In the Reporting &gt; Contents &gt; Experiments section set up an experiment to test two slightly different versions of your <code>index.html</code>. It&#8217;s best to only change one aspect at ta time (e.g. background picture/title text/button colour) so you can work out what is having an effect.</p>
+</div>
 	</div>
 
 </div>
