Updating to 97cdd0c454ddc8d2a4619e9cf8c7c5e337f554f5.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_9__3072013'>Session 9 - 30/7/2013</h3>
+
+<ul>
+<li><a href='/sinatra2'>Sinatra 2</a></li>
+
+<li><a href='/hmwk9'>Homework 9</a></li>
+</ul>
+
 <h3 id='session_8__2572013'>Session 8 - 25/7/2013</h3>
 
 <ul>
