--- a/sinatra2/index.html
+++ b/sinatra2/index.html
@@ -89,6 +89,13 @@
 <pre><code>$ heroku keys</code></pre>
 
 <p>It should list the ssh key that you just added.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Upload your ssh key to heroku by running</p>
+
+<pre><code>$ heroku keys:add</code></pre>
+</div>
 	</div>
 
 	
@@ -109,8 +116,8 @@
 </ul>
 
 <p><code>config.ru</code> contains the lines</p>
-<div class='highlight'><pre><code class='ruby'>    <span class='nb'>require</span> <span class='s1'>&#39;./app.rb&#39;</span>
-    <span class='n'>run</span> <span class='ss'>Sinatra</span><span class='p'>:</span><span class='ss'>:Application</span>
+<div class='highlight'><pre><code class='ruby'><span class='nb'>require</span> <span class='s1'>&#39;./app.rb&#39;</span>
+<span class='n'>run</span> <span class='ss'>Sinatra</span><span class='p'>:</span><span class='ss'>:Application</span>
 </code></pre></div>
 <p>These lines are to tell Heroku which file to find your application (<code>app.rb</code>) and how to run it (using Sinatra).</p>
 
@@ -223,7 +230,7 @@ To git@heroku.com:arcane-gorge-2129.git
 	
 
 		<h2>Post requests</h2>
-		<p>Last time we looked at responding to <code>POST</code> requests:</p>
+		<p>Last time we looked at responding to <code>get</code> requests:</p>
 <div class='highlight'><pre><code class='ruby'><span class='n'>get</span> <span class='s1'>&#39;/&#39;</span> <span class='k'>do</span>
     <span class='n'>erb</span> <span class='ss'>:index</span>
 <span class='k'>end</span>
@@ -273,7 +280,7 @@ To git@heroku.com:arcane-gorge-2129.git
 
 <p>Take a look at this <a href='http://calm-savannah-9937.herokuapp.com/'>simple word cloud maker</a>.</p>
 
-<p>Your challenge is to build something similar (hopfully better!).</p>
+<p>Your challenge is to build something similar (hopefully better!).</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
