--- a/sinatra2/index.html
+++ b/sinatra2/index.html
@@ -164,7 +164,7 @@ Writing objects: 100% (11/11), 1.08 KiB, done.
 Total 11 (delta 1), reused 0 (delta 0)
 
 -----&gt; Ruby/Rack app detected
------&gt; Using Ruby version: ruby-2.0.0
+-----&gt; Using Ruby version: ruby-1.9.3
 -----&gt; Installing dependencies using Bundler version 1.3.2
        Running: bundle install --without development:test --path vendor/bundle --binstubs vendor/bundle/bin --deployment
        Fetching gem metadata from https://rubygems.org/..........
@@ -176,11 +176,6 @@ Total 11 (delta 1), reused 0 (delta 0)
        Using bundler (1.3.2)
        Your bundle is complete! It was installed into ./vendor/bundle
        Cleaning up the bundler cache.
------&gt; WARNINGS:
-       You have not declared a Ruby version in your Gemfile.
-       To set your Ruby version add this line to your Gemfile:
-       ruby &#39;2.0.0&#39;
-       # See https://devcenter.heroku.com/articles/ruby-versions for more information.&quot;
 -----&gt; Discovering process types
        Procfile declares types     -&gt; (none)
        Default types for Ruby/Rack -&gt; console, rake, web
@@ -257,7 +252,15 @@ To git@heroku.com:arcane-gorge-2129.git
 <li>
 <p>Clone the code for the session:</p>
 
-<pre><code> git clone https://github.com/code61/sinatra2.git</code></pre>
+<pre><code> $ git clone https://github.com/code61/sinatra2.git</code></pre>
+</li>
+
+<li>
+<p>Run the application. Check you understand what it does and how it does it.</p>
+</li>
+
+<li>
+<p>Have a look at the <a href='http://sheltered-oasis-6836.herokuapp.com'>example solution</a>. This is what you&#8217;re trying to build!</p>
 </li>
 
 <li>
