Updating to 97cdd0c454ddc8d2a4619e9cf8c7c5e337f554f5.

--- a/sinatra2/index.html
+++ b/sinatra2/index.html
@@ -80,7 +80,7 @@
 
 <p>The final part of the set up is to upload your ssh keys to Heroku. You might remember about ssh keys from the initial installation instructions: they&#8217;re basically a way of identifying yourself to a server without typing in your password each time.</p>
 
-<p>The heroku toolbelt makes this very easy. On the commanline (in any folder) type:</p>
+<p>The heroku toolbelt makes this very easy. On the command line (in any folder) type:</p>
 
 <pre><code>$ heroku keys:add</code></pre>
 
