Updating to eb8032b3b7ffeb8209dea6963986949ef308a840.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_10__182013'> Session 10 - 1/8/2013</h3>
+
+<ul>
+<li><a href='/sinatra3'>Sinatra 3</a></li>
+
+<li><a href='/hmwk10'>Homework 10</a></li>
+</ul>
+
 <h3 id='session_9__3072013'>Session 9 - 30/7/2013</h3>
 
 <ul>
