Updating to eb8032b3b7ffeb8209dea6963986949ef308a840.

--- a/sinatra3/index.html
+++ b/sinatra3/index.html
@@ -231,14 +231,21 @@
 	
 
 		<h2>Project</h2>
-		The aim of this project is to create a course profiles site, similar to [this one](http://cfg-profiles.herokuapp.com/).
+		<p>The aim of this project is to create a course profiles site, similar to <a href='http://cfg-profiles.herokuapp.com/'>this one</a>.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Fork the project at <a href='https://github.com/code61/sinatra_project3'>https://github.com/code61/sinatra_project3</a>.</li>
 
-<div class='exercise alert alert-info' markdown='1'><strong>Task:</strong> 
-1. Fork the project at [https://github.com/code61/sinatra_project3](https://github.com/code61/sinatra_project3).
-2. Clone your fork down onto your laptop.
-3. You will need to work out how to read in the data from a CSV file. Take a look at the [ruby 3](/ruby3) session, or search for something like "ruby read csv".
-4. Create a list of all the course members at the root url `/`.
-5. Create a page for each member. You will need to decide which property of the user to put in the url, that you will later use to look them up. Link to these pages from the list you made in stap 4.
+<li>Clone your fork down onto your laptop.</li>
+
+<li>You will need to work out how to read in the data from a CSV file. Take a look at the <a href='/ruby3'>ruby 3</a> session, or search for something like &#8220;ruby read csv&#8221;.</li>
+
+<li>Create a list of all the course members at the root url <code>/</code>.</li>
+
+<li>Create a page for each member. You will need to decide which property of the user to put in the url, that you will later use to look them up. Link to these pages from the list you made in stap 4.</li>
+</ol>
 </div>
 	</div>
 
