--- a/sinatra3/index.html
+++ b/sinatra3/index.html
@@ -247,6 +247,16 @@
 <li>Create a page for each member. You will need to decide which property of the user to put in the url, that you will later use to look them up. Link to these pages from the list you made in stap 4.</li>
 </ol>
 </div>
+<h3 id='displaying_using_if'>Displaying using if</h3>
+
+<p>You might find the following technique useful:</p>
+
+<p><div class='highlight'><pre><code class='ruby'><span class='o'>&lt;</span><span class='sx'>% if </span><span class='vi'>@user</span><span class='o'>[</span><span class='s1'>&#39;Role&#39;</span><span class='o'>]==</span><span class='s1'>&#39;Teaching staff&#39;</span> <span class='sx'>%&gt;</span>
+<span class='sx'>    &lt;p&gt;</span><span class='no'>This</span> <span class='n'>person</span> <span class='n'>is</span> <span class='n'>on</span> <span class='n'>the</span> <span class='n'>course</span> <span class='n'>staff</span><span class='o'>&lt;</span><span class='sr'>/p&gt;</span>
+<span class='sr'>&lt;% end %&gt;</span>
+</code></pre></div></p>
+
+<p>This the <code>&lt;p&gt;</code> block will only be displayed if <code>@user[&#39;Role&#39;]</code> is <code>&#39;Teaching staff&#39;</code>.</p>
 	</div>
 
 </div>
