Updating to eb8032b3b7ffeb8209dea6963986949ef308a840.

--- a/hmwk10/index.html
+++ b/hmwk10/index.html
@@ -86,7 +86,7 @@
 </strong>
 <p>Install MongoDB either via</p>
 
-<pre><code>    $ brew install mongo</code></pre>
+<pre><code>$ brew install mongo</code></pre>
 
 <p>or by downloading and installing from the <a href='http://www.mongodb.org/downloads'>MongoDB website</a>.</p>
 </div>
@@ -94,7 +94,9 @@
 
 <p>You can start MongoDB running from the command line:</p>
 
-<pre><code>$ mongo</code></pre>
+<pre><code>$ mongod</code></pre>
+
+<p>You will need to keep this command line there and open a new one to continue the instructions.</p>
 
 <p>By default mongo will run on <a href='http://localhost:28017/'>localhost:28017</a>. If you visit that link in your browser you should see a mongo stats page.</p>
 <div class='exercise alert alert-info'><strong>
@@ -104,7 +106,7 @@
 <li>
 <p>Start MongoDB:</p>
 
-<p>$ mongo</p>
+<pre><code> $ mongod</code></pre>
 </li>
 
 <li>
